<resources>
    <string name="app_name">Application IPI</string>
    <string name="login">Identifiant</string>
    <string name="password">mot de passe</string>
    <string name="connect">Connection</string>
    <string name="error_login">Mots de Passe et Login incorrect</string>
    <string name="email">Email</string>
    <string name="title">Titre</string>
    <string name="des">Commentaire</string>
    <string name="send">Envoyer</string>
    <string name="title_activity_display_avis">DisplayAvis</string>
</resources>
