<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".FavActivity">

    <RatingBar
        android:id="@+id/rate_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:numStars="5" />

    <EditText
        android:id="@+id/rate_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rate_star"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/rate_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rate_mail"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/rate_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rate_titre"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/des"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/rate_send"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/rate_description"
        android:layout_centerHorizontal="true"
        android:hint="@string/send" />

</RelativeLayout>