<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/id_logo"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0px"
        android:layout_marginRight="20dp"
        android:layout_weight="50"
        app:layout_constraintBottom_toTopOf="@+id/id_login"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="85dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/id_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="343dp" />

        <EditText
            android:id="@+id/id_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_login"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="10"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="407dp" />

        <Button
            android:id="@+id/id_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_password"
            android:layout_centerHorizontal="true"
            android:hint="@string/connect"
            android:onClick="seConnecter" />
    </RelativeLayout>

</LinearLayout>